# webapp-2

./: .gitignore  LICENSE  README.md  app.py  embedding.py  prompt_chat.txt  pyproject.toml  requirements.txt
gpt3_logs/: 1677010783.1006024_gpt3.txt  1677010863.9873748_gpt3.txt  1677010992.599375_gpt3.txt
templates/: footer.html  home.html  login.html  nav.html  signup.html  strains.html
